fix: align search icon in search field

--- a/src/components/ControlBar/ViewControlBar/styles/Filter.module.css
+++ b/src/components/ControlBar/ViewControlBar/styles/Filter.module.css
@@ -1,3 +1,7 @@
+.container {
+    vertical-align: super;
+}
+
 .searchArea {
     width: 200px;
     height: 30px;
@@ -13,7 +17,7 @@
     width: 100%;
     min-width: 0;
     margin: 0;
-    padding: 6px 0 7px;
+    padding: 2px 0 0 0;
 }
 
 .input::placeholder {
@@ -53,6 +57,11 @@
 .searchIconSmall,
 .searchIconLarge {
     fill: var(--colors-grey700);
+}
+
+.searchIconLarge {
+    width: 20px;
+    height: 20px;
 }
 
 .searchButton {
@@ -96,6 +105,7 @@
 @media only screen and (max-width: 480px) {
     .input {
         width: 100%;
+        padding-bottom: 2px;
     }
 
     .searchIconSmall {
